[tool.poetry]
name = "intact-backend"
version = "0.1.0"
description = "INTACT backend."
authors = ["Zoe <19900057+vpsx@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
pymongo = "^4.9.0"
pydantic-settings = "^2.3.4"
python-multipart = "^0.0.9"
sqids = "^0.5.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
python-dotenv = "^1.0.1"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
